# python-project-50

./: .env  Makefile  README.md  ci.yml  package.json  pyproject.toml  test_compare_flat_jsons.py
.github/workflows/: ci.yml
gendiff/: json_diff.py
gendiff/scripts/: __init__.py  gendiff  gendiff.py
gendiff/tools/: generate_diff.py
tests/: test_compare_flat_jsons.py
