[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Doniyor <doniyorshavkati@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.packages]
include = ["gendiff"]

